# modelLr1

./: CMakeLists.txt
doc/: ModelLr1_RSorokin.docx
include/: congurent_generator.hpp  constexpr_pow.hpp  fibonacci_generator.hpp  generator_interface.hpp  mersenne_twister.hpp  metrics.hpp  myrandom.hpp
pythonscript/: out.csv  script.py
src/: congurent_generator.cpp  fibonacci_generator.cpp  main.cpp  mersenne_twister.cpp  metrics.cpp
